--- a/sample/pom.xml
+++ b/sample/pom.xml
@@ -141,6 +141,12 @@
             <artifactId>activemq-all</artifactId>
             <version>5.10.0</version>
         </dependency>
+    <dependency>
+            <groupId>org.mule.modules</groupId>
+            <artifactId>mule-module-spring-config</artifactId>
+            <version>${mule.version}</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
 	<repositories>
